# AIS4104-Assignments

./: CMakeLists.txt  vcpkg.json
Assignement-1/: main.cpp
Assignment-1/: Assignment-1-main.cpp  Assignment-1.cpp  Assignment-1.hpp  CMakeLists.txt  main-1.cpp
Assignment-2/: Assignment-2-main.cpp  Assignment-2.cpp  Assignment-2.hpp  CMakeLists.txt  main-2.cpp
Assignment-3/: Assignment-3.cpp  Assignment-3.hpp  CMakeLists.txt  main-3.cpp
src/: main.cpp
